# XBuilder

./: .gitignore  CMakeLists.txt  README.md
src/: XBuilderContext.cpp  XBuilderContext.hpp  command.c  context.hpp  file.hpp  keys.cpp  levelbuilder.cpp  levelbuilder.hpp  linetexture_editor.c  main.c  main.cpp  mouse.h  render.hpp  texture.cpp  texture.hpp  tool.cpp  tool.hpp  x3dwrapper.hpp
src/console/: Console.cpp  Console.hpp  commands.cpp  commands.hpp
src/geo/: Distance.hpp  Frustum.hpp  Plane.hpp  Polygon.cpp  Polygon.hpp  Prism.hpp  Ray.hpp  Vec3.hpp  geo.hpp
src/gui/: FaceTool.hpp  GuiManager.hpp  MainWindowManager.hpp  MouseState.hpp  Tool.cpp  Tool.hpp  ViewRenderer.cpp  ViewRenderer.hpp  gui.cpp  gui.hpp  widgets.cpp  widgets.hpp
src/gui/tools/: Tool.hpp  ToolManager.cpp  ToolManager.hpp
src/gui/tools/face/: ExtrudeFaceTool.hpp  FaceTool.cpp  FaceTool.hpp
src/gui/widgets/: TexturePickerWidget.hpp
src/gui/windows/: Window.cpp  Window.hpp  windows.hpp
src/gui/windows/console/: ConsoleWindow.cpp  ConsoleWindow.hpp
src/gui/windows/tool/: ToolWindow.hpp
src/gui/windows/tool/tools/: Tool.hpp  ToolManager.cpp  ToolManager.hpp  tools.hpp
src/gui/windows/tool/tools/face/: DecalTextureFaceTool.hpp  ExtrudeFaceTool.hpp  FaceTool.cpp  FaceTool.hpp  ScaleFaceTool.hpp  TextureFaceTool.hpp  facetools.hpp
src/gui/windows/tool/tools/segment/: CreateSegmentTool.hpp  SegmentTool.cpp  SegmentTool.hpp  segmentools.hpp
src/gui/windows/view/: ViewWindow.hpp
src/imgui/: imgui_impl_sdl_gl3.cpp
src/level/: Level.cpp  Level.hpp  LevelCommand.hpp  Raytracer.cpp  Raytracer.hpp
src/old/: command.c  gui.c  gui.h  linetexture_editor.c  main.c  mouse.c
src/pack/: DirectoryScanner.cpp  DirectoryScanner.hpp  IndexedFile.cpp  IndexedFile.hpp  ResourcePack.cpp  ResourcePack.hpp  fileutils.hpp
src/project/: Project.hpp  ProjectLoader.cpp  ProjectLoader.hpp  ProjectSaver.cpp  ProjectSaver.hpp
